<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pareeya.ahelp.HomeActivity"
    android:background="@drawable/bghome">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/button15"

        android:layout_centerHorizontal="true"

        android:layout_alignParentBottom="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="98dp"
            android:layout_height="match_parent">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h1"
            android:textStyle="bold" />

        <Button
            android:layout_width="290dp"
            android:layout_height="260dp"
            android:id="@+id/button16"
            android:background="@drawable/alarm" />

        <Button
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:id="@+id/button17"
            android:background="@drawable/call1"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/callhelp"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:id="@+id/button15"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/alert_dark_frame"
        android:layout_centerHorizontal="true"
        android:onClick="clickHomeGoSetting"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</RelativeLayout>
