<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pareeya.ahelp.MainActivity"
    android:background="@drawable/bglogin">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/button"
        android:onClick="clickSaveData"
        android:padding="25dp"
        android:textSize="@dimen/h2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#1c6ab3"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="#b6ebfdfd"
        android:weightSum="1"
        android:paddingTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/help"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:id="@+id/textView3"
                android:textSize="@dimen/h1"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                android:paddingBottom="20dp"
                android:paddingTop="20dp" />

            <EditText
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText7"
                android:textColor="@color/colorText"
                android:paddingTop="20dp"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:id="@+id/textView4"
                android:textSize="@dimen/h1"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                 />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText8"
                android:textColor="@color/colorText"
                android:inputType="number"
                android:hint="081xxxxxxx" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" รหัสผ่าน :"
                android:id="@+id/textView7"
                android:textSize="@dimen/h1"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText9"
                android:textColor="@color/colorText"
                android:inputType="text|number"
                android:hint="1234" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Re-Password"
                android:id="@+id/textView8"
                android:textSize="@dimen/h1"
                android:layout_weight="1"
                android:textColor="@color/colorText"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/editText10"
                android:textColor="@color/colorText"
                android:inputType="text|number" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
